# ft_linear_regression

./: .gitignore  Cargo.toml  README.md
src/: bonus.rs  core.rs  io.rs  lib.rs  main.rs  menu.rs  model.rs  parse.rs  parsing.rs  training.rs
