[package]
name = "ft_linear_regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
ndarray = "0.15.6" # Offers extensive operations for multi-dimensional data
ndarray-linalg = { version = "0.16.0", features = ["openblas"] } # Linear algebra operations
serde = { version = "1.0.197", features = ["derive"] }
