[package]
name = "ft_linear_regression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
prettytable-rs = "0.10.0"
serde = { version = "1.0.197", features = ["derive"] }
term = "0.7.0"
term_size = "0.3.2"
textplots = "0.8.6"

[lib]
path = "src/lib.rs"
